# conway

./: Cargo.toml  README.md  output.txt
cli/: Cargo.toml
cli-user/: Cargo.toml
cli-user/src/: main.rs
cli/src/: config.rs  display.rs  main.rs  parser.rs  renderer.rs
config/: sampleconfig.toml
config/config_sets/: configuration1
config/initial_states/: Eureka  beacon
config/input_cell_patterns/: neighbors
src/: lib.rs
src/config/: mod.rs
src/world/: builder.rs  cell.rs  mod.rs  return_types.rs  rules.rs
src/world/builder/: designs.rs  mod.rs
src/world/rules/: input_cells.rs  mod.rs
