[package]
name = "grid-sim"
description = "grid-based simulation in rust"
license = "BSD-2-Clause"
version = "0.3.0"
authors = ["daemoz"]

[dependencies]
rand = "0.3.15"
ncurses = { version = "5.86.0", optional = true }
argparse = { version = "*", optional = true }

[[bin]]
name = "conway-cli"
path = "cli/src/main.rs"
required-features = ["binaries"]

[features]
binaries = ["ncurses", "argparse"]
