[package]
name = "conway"
description = "grid-based simulation in rust"
license = "BSD-2-Clause"
version = "0.3.0"
authors = ["daemoz"]

[dependencies]
rand = "0.3.15"
ncurses = { version = "5.86.0", optional = true }
argparse = { version = "0.2.1", optional = true }
midir = { version = "0.5.0" }

[[bin]]
name = "conway-cli"
path = "cli/src/main.rs"
required-features = ["binaries"]

[features]
binaries = ["ncurses", "argparse"]
